# artydee

./: .gitignore  Cargo.toml  README.md  build.rs  haka.pfx.idl  haka.pfx.rc
muppet/: Cargo.toml
muppet/src/: lib.rs
sheets/: rtdtest.xlsm
src/: dll.rs  interfaces.rs  lib.rs  registry.rs  variant.rs
