[package]
name = "artydee"
version = "0.1.0"
authors = ["Jim McGrath <jimmc2@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["rlib", "cdylib"]

[build-dependencies]
embed-resource = "1.4"
cc = "1.0"

[dev-dependencies]
oaidl = { git = "https://github.com/ZerothLaw/oaidl-safe", branch = "develop" } # needs later than 0.2.1

[dependencies]
chrono = "0.4"
com = { version = "0.3", features = ["production"] }
env_logger = "0.8"
log = "0.4.11"
widestring = "0.4"
win_dbg_logger = "0.1.0"
winapi = { version = "0.3", features = ["oaidl","combaseapi","oleauto"] } 

[patch.crates-io]
com = { path = '../com-rs' }

[workspace]
members = [
    "muppet"
]
